tests/paczka1/fuzzy1/80644606.err
Error in line 1: Q0F1hGognu S892 13,6
Error in line 15: WgQiALuHA A340 31,21
Error in line 6: WgQiALuHA S650 49,0
Error in line 24: A340 A432 28,7
Error in line 27: K8g1pyo A432 88,5
Error in line 33: peIVWY A432 5,1
